sample-on-prem-ha-yamls/onprem-ha-ingress.yaml
  # Copyright Sonatype, Inc., 2022, All Rights Reserved.
  #
  # Licensed under the Apache License, Version 2.0 (the "License");
  # you may not use this file except in compliance with the License.
  # You may obtain a copy of the License at
  #
  # http://www.apache.org/licenses/LICENSE-2.0
  #
  # Unless required by applicable law or agreed to in writing, software
  # distributed under the License is distributed on an "AS IS" BASIS,
  # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  # See the License for the specific language governing permissions and
  # limitations under the License.
  #
  # Note: This YAML file is just an example and cannot be used as-is.
  # You must fill it out with the appropriate information for your deployment to be able to use it.

  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    namespace: nxrm
    name: nxrm-ingress
    annotations:
      kubernetes.io/ingress.class: nginx
  spec:
    rules:
      - host: example.com #comment out if not using https for load balancer
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: nxrm-service
                  port:
                    number: 80
